test/negative/missing_var.net
INPUT a
OUTPUT b
IN
b = NOT a
